--- a/app/views/v3/check-your-answers.html
+++ b/app/views/v3/check-your-answers.html
@@ -39,6 +39,23 @@
                 }
               ]
             }
+          },
+          {
+            key: {
+              text: "Business name"
+            },
+            value: {
+              html: "Alpha accounting"
+            },
+            actions: {
+              items: [
+                {
+                  href: "enter-your-details",
+                  text: "Change",
+                  visuallyHiddenText: "address"
+                }
+              ]
+            }
           }
         ]
       }) }}
