--- a/app/views/v3/company-name.html
+++ b/app/views/v3/company-name.html
@@ -21,10 +21,13 @@
 
       {{ govukInput({
         label: {
-          text: "What is the company name of the presenter?",
+          text: "What is the name of the business?",
           classes: "govuk-label--xl",
           isPageHeading: true
         },
+                  hint: {
+            text:"If you're a sole trader, you should give your own name if you do not have a different business name that you trader under."
+          },
         id: "presenter-name",
         name: "presenterName",
           spellcheck: false
