--- a/app/views/v3/start.html
+++ b/app/views/v3/start.html
@@ -42,10 +42,9 @@
     <ul class="govuk-list govuk-list--bullet">
       <li>sign in or create an account</li>
       <li>give a name and correspondence address for the account</li>
+      <li>give the name, or the company number of the business you work for</li>
       </ul>
       
-    <p>You'll also need to give the company number for the company you need to file for. Or, if you are 
-an agent who files for more than one company, you'll need to give the name or company number of the business you work for. </p>
 
 
     <p>It takes around 5 minutes to apply. </p>
