--- a/app/views/v3/type-filings.html
+++ b/app/views/v3/type-filings.html
@@ -18,19 +18,26 @@ What filings do you need to do? -   {{ serviceName }} - GOV.UK
               name: "typeFilings",
               fieldset: {
                 legend: {
-                  text: "What filings do you need to do?",
+                  text: "Is the business you work for registered with Companies House?",
                   isPageHeading: true,
                   classes: "govuk-fieldset__legend--xl"
                 }
               },
+
               items: [
                 {
                   value: "one",
-                  text: "I need to file for one company "
+                  text: "Yes", 
+                  hint: {
+                    text: "You'll need to give the company number."
+                  }
                 },
                 {
                   value: "agent",
-                  text: "I am an agent and need to file for more than one company"
+                  text: "No",
+                  hint: {
+                    text: "You'll need to give the name of the business."
+                  }
                 }
               ]
             }) }}
