--- a/app/views/v3/contact-details.html
+++ b/app/views/v3/contact-details.html
@@ -20,7 +20,7 @@
       <form class="form" action="check-your-answers" method="post">
 
  
-
+<!--
      {{ govukInput({
           label: {
             text: "Who can we contact about this account?",
@@ -32,7 +32,50 @@
           },
           id: "contact-name",
           name: "contactName"
-        }) }}
+        }) }} -->
+
+  <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
+    
+      Who can we contact about this account?
+  </h1>
+  <div id="event-name-hint" class="govuk-hint">
+    We'll use this if we need more information.
+  </div>
+
+
+
+          {{ govukInput({
+            label: {
+              text: "First name"
+            },
+            hint: {
+              text: ""
+            },
+            classes: "govuk-input--width-20",
+            id: "firstName",
+            name: "firstName"
+          }) }}
+
+          {{ govukInput({
+            label: {
+              text: "Middle name or names"
+            },
+            hint: {
+              text: ""
+            },
+            classes: "govuk-input--width-20",
+            id: "middleName",
+            name: "middleName"
+          }) }}
+
+          {{ govukInput({
+            label: {
+              text: "Last name"
+            },
+            classes: "govuk-input--width-20",
+            id: "lastName",
+            name: "lastName"
+          }) }}
 
             {% call govukFieldset({
               legend: {
