Typo on hint text

--- a/app/views/v3/company-name.html
+++ b/app/views/v3/company-name.html
@@ -26,7 +26,7 @@
           isPageHeading: true
         },
                   hint: {
-            text:"If you're a sole trader, you should give your own name if you do not have a different business name that you trader under."
+            text:"If you're a sole trader, you should give your own name if you do not have a different business name that you trade under."
           },
         id: "presenter-name",
         name: "presenterName",
