--- a/app/views/v3/contact-details.html
+++ b/app/views/v3/contact-details.html
@@ -77,11 +77,13 @@
             name: "lastName"
           }) }}
 
+
+        <span id="address"></span>
+
             {% call govukFieldset({
               legend: {
                 text: "What is their correspondence address?",
-                classes: "govuk-fieldset__legend--l",
-                isPageHeading: true
+                classes: "govuk-fieldset__legend--l"
               }
             }) %}
 
