Updated page titles and index

--- a/app/views/v3/check-your-answers.html
+++ b/app/views/v3/check-your-answers.html
@@ -59,6 +59,23 @@
           },
             {
             key: {
+              text: "Business name"
+            },
+            value: {
+              html: "My Business Name"
+            },
+            actions: {
+              items: [
+                {
+                  href: "company-name",
+                  text: "Change",
+                  visuallyHiddenText: "business name"
+                }
+              ]
+            }
+          },
+            {
+            key: {
               text: "Contact name"
             },
             value: {
