--- a/app/views/v3/contact-details.html
+++ b/app/views/v3/contact-details.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  Contact details - Apply for a Companies House online filing presenter account - GOV.UK
+  Who can we contact about this account? - Apply for a Companies House online filing presenter account - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
