--- a/app/views/v3/type-filings.html
+++ b/app/views/v3/type-filings.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-What filings do you need to do? -   {{ serviceName }} - GOV.UK
+Is the business you work for registered with Companies House? -   {{ serviceName }} - GOV.UK
 {% endblock %}
 {% block beforeContent %}
   {% include "/includes/user-bar.html" %}
