--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -30,11 +30,11 @@
           <li><a href="stop" class="govuk-link">Stop screen</a></li>
           <li><a href="sign-in" class="govuk-link">Sign in</a></li>
           <li><a href="sign-out" class="govuk-link">Sign out</a></li>
-         <li><a href="type-filings" class="govuk-link">What filings do you need to do?</a></li>
-          <li><a href="have-number" class="govuk-link">Is the business you work for registered with Companies House?</a></li>
+         <li><a href="type-filings" class="govuk-link">Is the business you work for registered with Companies House?</a></li>
           <li><a href="company-number" class="govuk-link">Company number</a></li>
-          <li><a href="correct-company" class="govuk-link">Company number (confirm company)</a></li>
-          <li><a href="contact-details" class="govuk-link">Contact details</a></li>
+          <li><a href="correct-company" class="govuk-link">Confirm this is the correct company</a></li>
+          <li><a href="company-name" class="govuk-link">What is the name of the business?</a></li>
+          <li><a href="contact-details" class="govuk-link">CWho can we contact about this account?</a></li>
           <li><a href="check-your-answers" class="govuk-link">Check your answers</a></li>
           <!-- <li><a href="generate-new-code#" class="govuk-link">Generate new code?</a></li>-->
           <li><a href="confirmation" class="govuk-link">Application submitted</a></li>
