--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -34,7 +34,7 @@
           <li><a href="company-number" class="govuk-link">Company number</a></li>
           <li><a href="correct-company" class="govuk-link">Confirm this is the correct company</a></li>
           <li><a href="company-name" class="govuk-link">What is the name of the business?</a></li>
-          <li><a href="contact-details" class="govuk-link">CWho can we contact about this account?</a></li>
+          <li><a href="contact-details" class="govuk-link">Who can we contact about this account?</a></li>
           <li><a href="check-your-answers" class="govuk-link">Check your answers</a></li>
           <!-- <li><a href="generate-new-code#" class="govuk-link">Generate new code?</a></li>-->
           <li><a href="confirmation" class="govuk-link">Application submitted</a></li>
