Updated page titles

--- a/app/views/v3/check-your-answers.html
+++ b/app/views/v3/check-your-answers.html
@@ -1,8 +1,7 @@
 {% extends "layouts/main.html" %}
 
-{% block pageTitle %}
-  Check your answers - Apply for a Companies House online filing presenter account - GOV.UK
-{% endblock %}
+{% set pageName="Check your answers" %}
+
 
 
 {% block beforeContent %}
