--- a/app/views/v3/company-name.html
+++ b/app/views/v3/company-name.html
@@ -1,7 +1,7 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-  What is the name of the business? - Apply for a Companies House online filing presenter account - GOV.UK
+  What is the name of the business? - {{ serviceName }} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
