--- a/app/views/v3/filter.html
+++ b/app/views/v3/filter.html
@@ -1,8 +1,7 @@
 {% extends "layouts/main.html" %}
 
-{% block pageTitle %}
-  What do you want to do? - Apply for a Companies House online filing presenter account - GOV.UK
-{% endblock %}
+{% set pageName="What do you need to file?" %}
+
 
 {% block beforeContent %}
   {% include "/includes/user-bar.html" %}
