--- a/app/views/v3/generate-new-code.html
+++ b/app/views/v3/generate-new-code.html
@@ -1,8 +1,7 @@
 {% extends "layouts/main.html" %}
 
-{% block pageTitle %}
-  Generate a new code - Apply for a Companies House online filing presenter account - GOV.UK
-{% endblock %}
+{% set pageName="Do you need a new presenter code?" %}
+
 
 {% block beforeContent %}
   {% include "/includes/user-bar.html" %}
