--- a/app/views/v3/stop.html
+++ b/app/views/v3/stop.html
@@ -1,8 +1,7 @@
 {% extends "layouts/main.html" %}
 
-{% block pageTitle %}
-  You cannot use this service - Apply for a Companies House online filing presenter account - GOV.UK
-{% endblock %}
+{% set pageName="You cannot use this service" %}
+
 
 {% block beforeContent %}
   {% include "/includes/user-bar.html" %}
