--- a/app/views/v3/type-filings.html
+++ b/app/views/v3/type-filings.html
@@ -1,8 +1,9 @@
 {% extends "layouts/main.html" %}
 
-{% block pageTitle %}
-Is the business you work for registered with Companies House? -   {{ serviceName }} - GOV.UK
-{% endblock %}
+{% set pageName="Is the business you work for registered with Companies House?" %}
+
+
+
 {% block beforeContent %}
   {% include "/includes/user-bar.html" %}
 {% endblock %}
