--- a/app/views/accessibility-statement.html
+++ b/app/views/accessibility-statement.html
@@ -1,8 +1,7 @@
 {% extends "layouts/main.html" %}
 
-{% block pageTitle %}
-  Accessibility statement -  {{ serviceName }} - GOV.UK
-{% endblock %}
+{% set pageName="Accessibility statement" %}
+
 
 {% block content %}
   <div class="govuk-grid-row">
