--- a/app/views/v3/sign-out.html
+++ b/app/views/v3/sign-out.html
@@ -1,8 +1,7 @@
 {% extends "layouts/main.html" %}
 
-{% block pageTitle %}
-Are you sure you want to sign out? -   {{ serviceName }} - GOV.UK
-{% endblock %}
+{% set pageName="Are you sure you want to sign out?" %}
+
 {% block signOut %}
 
 {% endblock %}
