--- a/app/views/v3/check-your-answers.html
+++ b/app/views/v3/check-your-answers.html
@@ -78,7 +78,7 @@
               text: "Contact name"
             },
             value: {
-              html: "Jane Lisa Doe"
+              html: "Jane Doe"
             },
             actions: {
               items: [
