--- a/app/views/v3/contact-details.html
+++ b/app/views/v3/contact-details.html
@@ -36,7 +36,7 @@
 
   <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">
     
-      Who can we contact about this account?
+      Tell us your contact details
   </h1>
   <div id="event-name-hint" class="govuk-hint">
     We'll use this if we need more information.
@@ -72,7 +72,7 @@
 
             {% call govukFieldset({
               legend: {
-                text: "What is their correspondence address?",
+                text: "What is your correspondence address?",
                 classes: "govuk-fieldset__legend--l"
               }
             }) %}
