--- a/app/views/v3/company-number.html
+++ b/app/views/v3/company-number.html
@@ -17,7 +17,20 @@
       <form class="form" action="correct-company" method="post">
 
 
+<div class="govuk-form-group">
+  <h1 class="govuk-label-wrapper">
+    <label class="govuk-label govuk-label--xl">
+      What is the company number?
+    </label>
+  </h1>
+  <div id="event-name-hint" class="govuk-hint">
+    <p class="govuk-hint">The name you’ll use on promotional material</p>
+    <p class="govuk-hint">If you have a company number that’s 7 characters or less, enter zeros at the start so that it's 8 characters in total. For example, if it’s 12345, enter 00012345.</p>
+  </div>
+  <input class="govuk-input govuk-!-width-one-half" id="event-name" name="eventName" type="text" aria-describedby="event-name-hint">
+</div>
 
+<!--
       {{ govukInput({
   label: {
     text: "What is the company number?",
@@ -25,7 +38,10 @@
     isPageHeading: true
   },
   hint: {
-    text: "The 8-character reference issued by Companies House when the company was set up"
+    text: "Enter the 8 character company number. 
+
+If you have a company number that’s 7 characters or less, enter zeros at the start so that it's 8 characters in total. For example, if it’s 12345, enter 00012345.
+"
   },
     classes: "govuk-!-width-one-half",
   id: "company-number",
@@ -33,11 +49,11 @@
   value: data['company-number']
 }) }}
 
-
+-->
 
 {{ govukDetails({
-  summaryText: "Help with company number",
-  html: 'Use the <a class="govuk-link" href="https://find-and-update.company-information.service.gov.uk/">Companies House service</a> to find it.'
+  summaryText: "How do I find the company number?",
+  html: 'You can find this by searching for the company on the <a class="govuk-link" target="_blank" href="https://find-and-update.company-information.service.gov.uk/">Companies House register (opens in a new tab)</a>.'
 }) }}
       
 {{ govukButton({
