--- a/app/views/v3/company-number.html
+++ b/app/views/v3/company-number.html
@@ -24,7 +24,7 @@
     </label>
   </h1>
   <div id="event-name-hint" class="govuk-hint">
-    <p class="govuk-hint">The name you’ll use on promotional material</p>
+    <p class="govuk-hint">Enter the 8 character company number. </p>
     <p class="govuk-hint">If you have a company number that’s 7 characters or less, enter zeros at the start so that it's 8 characters in total. For example, if it’s 12345, enter 00012345.</p>
   </div>
   <input class="govuk-input govuk-!-width-one-half" id="event-name" name="eventName" type="text" aria-describedby="event-name-hint">
